# growl

./: .gitignore  Makefile  README.md  growl_benchmarks.txt  slop.toml
.github/workflows/: release.yml
cli/: main.slop  slop.toml
cli/tests/: benchmark.sh  benchmark_compare.py  slop.toml  test-cli.slop  test_conformance.py  test_interactions.py  test_reference.py
cli/tests/fixtures/: disjoint-violation.ttl  equivalent-class.ttl  invalid-literal.ttl  roundtrip-out.ttl  sameas-chain.ttl  sameas-differentfrom.ttl  subclass-chain.ttl  valid-literals.ttl  validate-bg-domain.ttl  validate-bg-tlo.ttl  validate-clean.ttl  validate-domain-only.ttl  validate-unsat-prop.ttl  (+3 more)
csrc/: generate_c.py  update_bootstrap.sh
csrc/runtime/: slop_runtime.h
csrc/src/: slop_cax.c  slop_cax.h  slop_cls.c  slop_cls.h  slop_common.c  slop_common.h  slop_dt.c  slop_dt.h  slop_engine.c  slop_engine.h  slop_eq.c  slop_eq.h  slop_file.c  slop_filter.c  slop_filter.h  slop_growl.c  slop_growl.h  slop_index.c  slop_index.h  slop_list.c  slop_list.h  slop_main.c  slop_main.h  slop_prp.c  slop_prp.h  slop_rdf.c  slop_rdf.h  slop_scm.c  slop_scm.h  slop_serialize_ttl.c  slop_serialize_ttl.h  slop_strlib.c  slop_strlib.h  slop_test_cli.c  slop_test_cli.h  slop_thread.c  slop_thread.h  slop_ttl.c  slop_ttl.h  slop_types.c  (+5 more)
include/: growl.h
rust/: .gitignore  Cargo.toml  README.md  build.rs  csrc_shim.c
rust/src/: ffi.rs  lib.rs
rust/tests/: integration.rs
src/: engine.slop  filter.slop  growl.slop  test.slop  types.slop
src/rules/: cax.slop  cls.slop  dt.slop  eq.slop  prp.slop  scm.slop
(+3 files in other folders)
